Change comment textbox

--- a/P1/src/pet_detail_shelter_view.html
+++ b/P1/src/pet_detail_shelter_view.html
@@ -12,7 +12,7 @@
 
 <body class="flex flex-col justify-center items-center bg-gray-100">
     <div class="flex justify-center items-center p-3">
-        <a href="shelter_detail_user_view.html"
+        <a href="shelter_detail_shelter_view.html"
             class="relative flex justify-center text-center items-center transform transition duration-300 hover:scale-105">
             <div class="rounded-full w-[50px] h-[50px] mr-1 mb-1">
                 <img src="resources/shelter/shelter_logo.png">
@@ -95,7 +95,7 @@
             <div class="bg-white flex-col flex-start p-6 w-full">
                 <div
                     class="flex mb-2 text-2xl items-center font-medium leading-tight text-neutral-800 dark:text-neutral-50">
-                    <div class="flex w-1/2 flex-col md:flex-row">
+                    <div class="flex w-1/2 flex-col md:flex-row gap-4">
                         <h5>
                             DunDun
                         </h5>
@@ -103,9 +103,11 @@
                         <a href="#"
                             class="transititext-primary text-primary transition duration-150 ease-in-out hover:text-primary-600 focus:text-primary-600 active:text-primary-700 dark:text-primary-400 dark:hover:text-primary-500 dark:focus:text-primary-500 dark:active:text-primary-600"
                             data-te-toggle="tooltip" title="DunDun is available!">
-                            <div class="md:ml-3 bg-green-600 h-6 w-6 rounded-full text-right">
+                            <span
+                                class="bg-green-100 text-green-800 text-xs font-medium mr-2 px-2.5 py-0.5 rounded dark:bg-green-900 dark:text-green-300">
+                                Available
+                            </span>
 
-                            </div>
                         </a>
                     </div>
 
