--- a/P1/src/shelter_detail_editable.html
+++ b/P1/src/shelter_detail_editable.html
@@ -60,7 +60,7 @@
         <div class="rounded-full w-[50px] h-[50px] mr-1 mb-1">
             <img src="resources/shelter/shelter_logo.png">
         </div>
-        <h1 class="text-5xl">Toronto Adoption Center</h1>
+        <h1 class="text-5xl w-min md:w-auto">Toronto Adoption Center</h1>
     </div>
     <section id="shelter-info" class="p-2 w-3/4 mb-3">
         <div
