login/signup error page for both seeker, user, made linking btwn these pages

--- a/P1/src/signup&login/sec_shelter_signup.html
+++ b/P1/src/signup&login/sec_shelter_signup.html
@@ -31,7 +31,7 @@
                         <!-- Email -->
                         <div class="mb-4">
                             <label for="email" class="block mb-2 text-sm font-medium text-gray-900">Email address</label>
-                            <input type="email" id="email" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="john.doe@company.com" required>
+                            <input type="email" id="email" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="torontocentre@company.com" required>
                         </div> 
                         <!-- Password -->
                         <div class="grid gap-3 md:grid-cols-2">
@@ -93,7 +93,7 @@
                         </div>
 
                         <button type="submit" class="text-white mb-5 bg-blue-700 hover:bg-gray-900 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-medium w-full sm:w-full px-5 py-2.5 text-center">
-                            <a href="../main_after_login.html">Sign Up</a> 
+                            <a href="./shelter_signup_error.html">Sign Up</a> 
                             <!-- when get rid of the a tag inside button, will not proceed to main after login -->
                         </button>
 
