--- a/P1/src/signup&login/login_shelter.html
+++ b/P1/src/signup&login/login_shelter.html
@@ -44,7 +44,9 @@
                             <input type="password" name="password" id="password" placeholder="••••••••" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 " required="">
                         </div>
 
-                        <button type="submit" class="w-full text-white bg-blue-600 hover:bg-primary-700 hover:bg-gray-900 :ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-medium px-5 py-2.5 text-center"><a href="./login_error_seeker.html">Log In</a></button>
+                        <button type="submit" class="w-full text-white bg-blue-600 hover:bg-primary-700 hover:bg-gray-900 :ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-medium px-5 py-2.5 text-center">
+                            <a href="../main/main_after_login_shelter.html">Log In</a>
+                        </button>
                         <p class="text-sm font-medium text-gray-500">
                             Don't have an account? <a href="./seeker_signup.html" class="font-medium text-blue-600 hover:underline">Sign Up</a>
                         </p>
