fixed the link of petpal in the footer sec

--- a/P1/src/pet_adoption.html
+++ b/P1/src/pet_adoption.html
@@ -240,7 +240,7 @@
                 </div>
                 <hr class="my-6 border-gray-200 sm:mx-auto lg:my-6" />
                 <div class="sm:flex sm:items-center sm:justify-between">
-                    <span class="text-sm text-gray-500 sm:text-center">© 2023 <a href="https://flowbite.com/"
+                    <span class="text-sm text-gray-500 sm:text-center">© 2023 <a href="./main/main_after_login.html"
                             class="hover:underline">
                             PetPal™</a>. All Rights Reserved.
                     </span>
