--- a/P1/src/pet_adoption.html
+++ b/P1/src/pet_adoption.html
@@ -219,7 +219,7 @@
         <footer class="bg-gray-100 rounded-lg shadow" style="width: 100%;">
             <div class="w-full max-w-screen-xl mx-auto p-4 py-8 lg:py-12 lg:pb-16">
                 <div class="sm:flex sm:items-center sm:justify-between">
-                    <a href="https://flowbite.com/" class="flex items-center mb-4 sm:mb-0">
+                    <a href="./main/main_after_login.html" class="flex items-center mb-4 sm:mb-0">
                         <!-- <img src="https://flowbite.com/docs/images/logo.svg" class="h-8 mr-3" alt="Flowbite Logo" /> -->
                         <span class="self-center text-2xl font-semibold whitespace-nowrap">Pet Pal</span>
                     </a>
@@ -240,8 +240,8 @@
                 </div>
                 <hr class="my-6 border-gray-200 sm:mx-auto lg:my-6" />
                 <div class="sm:flex sm:items-center sm:justify-between">
-                    <span class="text-sm text-gray-500 sm:text-center">© 2023 <a href="./main/main_after_login.html"
-                            class="hover:underline">
+                    <span class="text-sm text-gray-500 sm:text-center">© 2023 
+                        <a href="./main/main_after_login.html" class="hover:underline">
                             PetPal™</a>. All Rights Reserved.
                     </span>
                     <div class="flex mt-4 space-x-5 sm:justify-center sm:mt-0">
