--- a/P1/src/shelter_detail_shelter_view.html
+++ b/P1/src/shelter_detail_shelter_view.html
@@ -126,8 +126,8 @@
         </div>
     </section>
 
-    <h2 class="text-5xl mt-3 mb-1 p-2">Pets Available for Adoption</h2>
-    <h2 class="pb-3">Create lasting memories with a new loving companion!</h2>
+    <h2 class="text-5xl mt-3 mb-1 p-2">My Pets</h2>
+    <!-- <h2 class="pb-3">Create lasting memories with a new loving companion!</h2> -->
 
     <section id="shelter-pets" class="w-full p-3">
         <div class="stretch flex flex-row m-4 md:max-w-full  bg-white rounded-lg shadow-md mb-0">
