--- a/P1/src/main/main.html
+++ b/P1/src/main/main.html
@@ -4,19 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css" rel="stylesheet">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css" rel="stylesheet"> -->
     <link rel="stylesheet" href="style.css">
     <!-- flowbite tailwind -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- font awseome icon -->
-    <!-- <script src="https://kit.fontawesome.com/199027eb42.js" crossorigin="anonymous"></script> -->
-
     <title>Pet Pal - Home</title>
 </head>
 
 <body>
-    <!-- Navbar (You can customize it as needed) -->
+    <!-- Navbar -->
     <nav class="border-gray-200">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
             <a href="./main.html" class="flex items-center">
@@ -62,7 +59,7 @@
                 <ul
                     class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-50 rounded-lg md:flex-row md:space-x-8 md:mt-0 md:border-0">
                     <li>
-                        <a href="#"
+                        <a href="./main.html"
                             class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:underline md:bg-transparent md:bg-gray-100 md:p-0"
                             aria-current="page">Home</a>
                     </li>
@@ -71,7 +68,7 @@
                             class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:underline md:hover:bg-transparent md:p-0">About</a>
                     </li>
                     <li>
-                        <a href="#"
+                        <a href="../navbar/adopt_signup.html"
                             class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:underline md:hover:bg-transparent md:p-0">Adopt</a>
                     </li>
                     <li>
@@ -263,7 +260,7 @@
                 <p class="mb-6 font-light text-gray-500 md:text-lg"><span class="font-bold">Pet Pal</span> is a
                     passionate community dedicated to connecting pets with loving families. We believe that every pet
                     deserves a forever home, and we are committed to making that happen.</p>
-                <a href="#"
+                <a href="../navbar/adopt_signup.html"
                     class="inline-flex font-medium items-center text-white bg-gray-700 hover:bg-gray-900 focus:ring-2 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center">
                     Get started
                     <svg class="ml-2 -mr-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
@@ -480,7 +477,7 @@
     <footer class="bg-gray-100 rounded-lg shadow">
         <div class="w-full max-w-screen-xl mx-auto p-4 py-8 lg:py-12 lg:pb-16">
             <div class="sm:flex sm:items-center sm:justify-between">
-                <a href="https://flowbite.com/" class="flex items-center mb-4 sm:mb-0">
+                <a href="./main.html" class="flex items-center mb-4 sm:mb-0">
                     <!-- <img src="https://flowbite.com/docs/images/logo.svg" class="h-8 mr-3" alt="Flowbite Logo" /> -->
                     <span class="self-center text-2xl font-semibold whitespace-nowrap">Pet Pal</span>
                 </a>
