--- a/P1/src/main/main_after_login.html
+++ b/P1/src/main/main_after_login.html
@@ -63,7 +63,7 @@
 
                         <a href="#" class="hidden md:flex md:px-4 md:py-3 hover:bg-gray-100">
                         <div class="w-full pl-3">
-                            <div class="text-gray-500 text-sm mb-1.5 "><span class="font-semibold text-gray-900 ">Toronto Community Centre</span> has left a reply! <span class="font-medium text-blue-500" href="#">@bonnie.green</span> It costs ...</div>
+                            <div class="text-gray-500 text-sm mb-1.5 "><span class="font-semibold text-gray-900 ">Toronto Community Centre</span> has left a reply! <span class="font-medium text-blue-500" href="#">@sean.song</span> It costs ...</div>
                             <div class="text-xs text-blue-600 ">1 hour ago</div>
                         </div>
                         </a>
@@ -94,7 +94,7 @@
                         <svg class="absolute w-12 h-12 text-gray-400 -left-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clip-rule="evenodd"></path></svg>
                     </div> -->
                     <div class="relative">
-                        <img class="w-8 h-8 md:w-10 md:h-10 rounded-full" src="../resources/default-profile-image.jpg" alt="">
+                        <img class="w-8 h-8 md:w-10 md:h-10 rounded-full object-cover" src="../resources/users/user_1.png" alt="">
                         <span class="top-0 left-7 absolute w-3.5 h-3.5 bg-red-500 border-2 border-white md:w-0 md:h-0 md:border-0 md:border-none rounded-full"></span>
                     </div>
                 </button>
@@ -106,7 +106,7 @@
                     </div>
                     <ul class="py-2" aria-labelledby="user-menu-button">
                         <li>
-                        <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Settings</a>
+                        <a href="../seeker_update.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Settings</a>
                         </li>
                         <li>
                             <a href="../list_seeker_applications.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">My Application</a>
@@ -141,7 +141,7 @@
                 <a href="#" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:underline md:hover:bg-transparent md:p-0">About</a>
                 </li>
                 <li>
-                <a href="#" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:underline md:hover:bg-transparent md:p-0">Adopt</a>
+                <a href="../navbar/adopt_login.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:underline md:hover:bg-transparent md:p-0">Adopt</a>
                 </li>
                 <li>
                 <a href="#" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:underline md:hover:bg-transparent md:p-0">Contact</a>
@@ -293,8 +293,8 @@
         </div>
         <!-- See More button -->
         <div class="md:mt-2 xl:mt-4 text-center">
-            <a href="./search.html">
-                <button type="button" class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-2 focus:ring-gray-300 font-medium rounded-xl text-base px-10 py-2.5 mr-2 mb-2">See More</button>
+            <a href="../search.html">
+                <button type="button" class="text-white bg-gray-700 hover:bg-gray-900 focus:outline-none focus:ring-2 focus:ring-gray-300 font-medium rounded-xl text-base px-10 py-2.5 mr-2 mb-2">See More</button>
             </a>
         </div>
     </section>
@@ -307,7 +307,7 @@
             <div class="mt-4 md:mt-0">
                 <h2 class="mb-4 text-xl sm:text-3xl md:text-4xl tracking-tight font-extrabold text-gray-900">Rescue, Love, Repeat: Start Your Journey Here!</h2>
                 <p class="mb-6 font-light text-gray-500 md:text-lg"><span class="font-bold">Pet Pal</span> is a passionate community dedicated to connecting pets with loving families. We believe that every pet deserves a forever home, and we are committed to making that happen.</p>
-                <a href="#" class="inline-flex items-center text-white bg-gray-700 hover:bg-gray-900 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center">
+                <a href="../navbar/adopt_login.html" class="inline-flex items-center text-white bg-gray-700 hover:bg-gray-900 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center">
                     Get started
                     <svg class="ml-2 -mr-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
                 </a>
@@ -451,7 +451,7 @@
     <footer class="bg-gray-100 rounded-lg shadow">
         <div class="w-full max-w-screen-xl mx-auto p-4 py-8 lg:py-12 lg:pb-16">
             <div class="sm:flex sm:items-center sm:justify-between">
-                <a href="https://flowbite.com/" class="flex items-center mb-4 sm:mb-0">
+                <a href="./main_after_login.html" class="flex items-center mb-4 sm:mb-0">
                     <!-- <img src="https://flowbite.com/docs/images/logo.svg" class="h-8 mr-3" alt="Flowbite Logo" /> -->
                     <span class="self-center text-2xl font-semibold whitespace-nowrap">Pet Pal</span>
                 </a>
@@ -472,7 +472,7 @@
             </div>
             <hr class="my-6 border-gray-200 sm:mx-auto lg:my-6" />
             <div class="sm:flex sm:items-center sm:justify-between">
-                <span class="text-sm text-gray-500 sm:text-center">© 2023 <a href="https://flowbite.com/" class="hover:underline">
+                <span class="text-sm text-gray-500 sm:text-center">© 2023 <a href="./main_after_login.html" class="hover:underline">
                     PetPal™</a>. All Rights Reserved.
                 </span>
                 <div class="flex mt-4 space-x-5 sm:justify-center sm:mt-0">
