--- a/P1/src/pet_adoption.html
+++ b/P1/src/pet_adoption.html
@@ -49,14 +49,14 @@
                     <div class="grid-cols-2 sm:grid md:grid-cols-1 gap-4">
                         <label for="pet_name" class="mt-1 p-2 block font-bold text-gray-700">Name of Pet You Wish to
                             Adopt:<span class="text-red-500">*</span></label>
-                        <input type="pet name" name="pet name" id="pet name"
+                        <input type="pet name" name="pet name" id="pet name" value="DunDun"
                             class="bg-white-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 mb-4 mt-1"
                             placeholder="Pet Name" required>
 
 
                         <label for="owner_name" class="mt-1 p-2 block font-bold text-gray-700">Your Name:<span
                                 class="text-red-500">*</span></label>
-                        <input type="name" name="name" id="name"
+                        <input type="name" name="name" id="name" value="Sean Song"
                             class="bg-white-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 mb-4"
                             placeholder="Full Name" required>
 
@@ -65,10 +65,10 @@
                                 class="text-red-500">*</span></label>
                         <div class="mb-4">
                             <div class="grid-cols-2 sm:grid md:grid-cols-1 gap-4">
-                                <input type="area code" name="area code" id="area code"
+                                <input type="area code" name="area code" id="area code" value="416"
                                     class="bg-white-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 mb-4"
                                     placeholder="Area Code" required="">
-                                <input type="phone number" name="phone number" id="phone number"
+                                <input type="phone number" name="phone number" id="phone number" value="123-1234"
                                     class="bg-white-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 mb-4"
                                     placeholder="Phone Number" required>
                             </div>
@@ -77,7 +77,7 @@
 
                         <label for="email" class="mt-1 p-2 block font-bold text-gray-700">Email:<span
                                 class="text-red-500">*</span></label>
-                        <input type="email" name="email" id="email"
+                        <input type="email" name="email" id="email" value="sean.song@gmail.com"
                             class="bg-white-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 mb-4"
                             placeholder="name@company.com" required>
 
@@ -86,26 +86,26 @@
                         <div class="mb-4">
                             <div class="grid-cols-1 sm:grid md:grid-cols-1">
                                 <input type="street address 1" name="street address 1" id="street address 1"
+                                    value="123 Road Avenue"
                                     class="bg-white-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 mb-4"
                                     placeholder="Street Address 1" required>
                                 <input type="street address 2" name="street address 2" id="street address 2"
                                     class="bg-white-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 mb-4"
                                     placeholder="Street Address 2" required>
                                 <div class="grid-cols-2 sm:grid md:grid-cols-1 gap-4">
-                                    <input type="city" name="city" id="city"
+                                    <input type="city" name="city" id="city" value="Toronto"
                                         class="bg-white-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 mb-4"
                                         placeholder="City" required>
-                                    <input type="province" name="province" id="province"
+                                    <input type="province" name="province" id="province" value="Ontario"
                                         class="bg-white-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 mb-4"
                                         placeholder="Province" required>
                                 </div>
                                 <div class="grid-cols-2 sm:grid md:grid-cols-1 gap-4">
-                                    <input type="postal code" name="postal code" id="postal code"
+                                    <input type="postal code" name="postal code" id="postal code" value="A1A 1A1"
                                         class="bg-white-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 mb-4"
                                         placeholder="Postal Code" required>
                                     <select id="country"
                                         class="bg-white-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 mb-4">
-                                        <option value="select">Country</option>
                                         <option value="country1">Canada</option>
                                         <option value="country2">United States of America</option>
                                     </select>
@@ -240,7 +240,7 @@
                 </div>
                 <hr class="my-6 border-gray-200 sm:mx-auto lg:my-6" />
                 <div class="sm:flex sm:items-center sm:justify-between">
-                    <span class="text-sm text-gray-500 sm:text-center">© 2023 
+                    <span class="text-sm text-gray-500 sm:text-center">© 2023
                         <a href="./main/main_after_login.html" class="hover:underline">
                             PetPal™</a>. All Rights Reserved.
                     </span>
