Add prefilled data

--- a/P1/src/pet_adoption.html
+++ b/P1/src/pet_adoption.html
@@ -65,10 +65,10 @@
                                 class="text-red-500">*</span></label>
                         <div class="mb-4">
                             <div class="grid-cols-2 sm:grid md:grid-cols-1 gap-4">
-                                <input type="area code" name="area code" id="area code" value="416"
+                                <input type="area code" name="area code" id="area code" value="123"
                                     class="bg-white-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 mb-4"
                                     placeholder="Area Code" required="">
-                                <input type="phone number" name="phone number" id="phone number" value="123-1234"
+                                <input type="phone number" name="phone number" id="phone number" value="4567890"
                                     class="bg-white-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 mb-4"
                                     placeholder="Phone Number" required>
                             </div>
@@ -86,7 +86,7 @@
                         <div class="mb-4">
                             <div class="grid-cols-1 sm:grid md:grid-cols-1">
                                 <input type="street address 1" name="street address 1" id="street address 1"
-                                    value="123 Road Avenue"
+                                    value="1000 Bay Street"
                                     class="bg-white-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 mb-4"
                                     placeholder="Street Address 1" required>
                                 <input type="street address 2" name="street address 2" id="street address 2"
@@ -101,7 +101,7 @@
                                         placeholder="Province" required>
                                 </div>
                                 <div class="grid-cols-2 sm:grid md:grid-cols-1 gap-4">
-                                    <input type="postal code" name="postal code" id="postal code" value="A1A 1A1"
+                                    <input type="postal code" name="postal code" id="postal code" value="M5S 3A8"
                                         class="bg-white-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 mb-4"
                                         placeholder="Postal Code" required>
                                     <select id="country"
@@ -208,12 +208,13 @@
 
                 </div>
             </form>
-            <div class="grid-cols-1 sm:grid md:grid-cols-1 gap-4 ml-80 mr-80 mb-10">
+            <a class="grid-cols-1 sm:grid md:grid-cols-1 gap-4 ml-80 mr-80 mb-10" href="thank_you_application.html">
+
                 <button type="button"
                     class="inline-block rounded bg-neutral-800 px-6 pb-2 pt-2.5 text-xs font-medium uppercase leading-normal text-neutral-50 shadow-[0_4px_9px_-4px_rgba(51,45,45,0.7)] transition duration-150 ease-in-out hover:bg-neutral-800 hover:shadow-[0_8px_9px_-4px_rgba(51,45,45,0.2),0_4px_18px_0_rgba(51,45,45,0.1)] focus:bg-neutral-800 focus:shadow-[0_8px_9px_-4px_rgba(51,45,45,0.2),0_4px_18px_0_rgba(51,45,45,0.1)] focus:outline-none focus:ring-0 active:bg-neutral-900 active:shadow-[0_8px_9px_-4px_rgba(51,45,45,0.2),0_4px_18px_0_rgba(51,45,45,0.1)] dark:bg-neutral-900 dark:shadow-[0_4px_9px_-4px_#030202] dark:hover:bg-neutral-900 dark:hover:shadow-[0_8px_9px_-4px_rgba(3,2,2,0.3),0_4px_18px_0_rgba(3,2,2,0.2)] dark:focus:bg-neutral-900 dark:focus:shadow-[0_8px_9px_-4px_rgba(3,2,2,0.3),0_4px_18px_0_rgba(3,2,2,0.2)] dark:active:bg-neutral-900 dark:active:shadow-[0_8px_9px_-4px_rgba(3,2,2,0.3),0_4px_18px_0_rgba(3,2,2,0.2)]">
                     Submit Application
                 </button>
-            </div>
+            </a>
         </section>
 
         <footer class="bg-gray-100 rounded-lg shadow" style="width: 100%;">
