swtitched card details

--- a/P1/src/search.html
+++ b/P1/src/search.html
@@ -360,41 +360,28 @@
                         <a href="pet_detail.html">
                             <div class="relative w-full h-64 min-h-64 max-h-64">
                                 <img class="w-full h-full object-cover rounded-t-lg" src="resources/pets/cat.jpg"
-                                     alt="" />
+                                        alt="" />
                             </div>
 
-                            <div class="flex-col flex-start p-5 pb-0">
-                                <!-- <h5 class="mb-2 text-xl font-medium leading-tight text-neutral-800 dark:text-neutral-50">
-                                     Betsy
-                                     </h5>
-                                -->
-                                <div class="mb-2 flex justify-start items-center gap-4">
+                            <div class="flex-col p-5">
+                                <div class="mb-2 flex-col sm:flex-row flex justify-between">
                                     <div>
-                                        <h5 class=" text-xl md:text-2xl font-medium leading-tight text-gray-900 dark:text-neutral-50">
-                                            Betsy
+                                        <h5 class=" text-xl font-medium leading-tight text-gray-900 ">Betsy
                                         </h5>
                                     </div>
                                     <div>
                                         <span class="bg-yellow-100 text-yellow-800 text-sm font-medium mr-2 px-2.5 py-0.5 rounded dark:bg-yellow-900 dark:text-yellow-300">On Hold</span>
-
                                     </div>
                                 </div>
-
-                                <p class="text-medium text-gray-700"> Gender: Male </p>
-                                <p class="text-medium text-gray-700"> Age: 3 years </p>
-                                <p class="text-medium text-gray-700"> Breed: Boston Terrier </p>
-                                <p class="text-medium text-gray-700"> Size: Large </p>
-                                <p class="inline text-medium text-gray-700"> Shelter: 
-                                    <a  class="transform transition duration-300 hover:scale-105" href="shelter_detail_user_view.html" >
-                                            <span class=" text-medium text-gray-700
-                                                         ">Toronto Adoption Center</span>
-                                        </a>
-                                </p>
+                                <p class="text-medium text-gray-700">
+                                    Male &#8226 3 years </p>
+                                <p class="text-medium text-gray-700">
+                                    Boston Terrier </p>
+                                <p class="text-medium text-gray-700">
+                                    Toronto Adoption Center </p>
+                                <p class="text-xs mt-2  text-gray-700">
+                                    December 31, 2023 </p>
                             </div>
-                            <div>
-                                <p class="p-2 float-right text-sm text-gray-500"> Posted: December 31, 2023 </p>
-                            </div>
-
                         </a>
                     </div>
                 </div>
