Change font to be consistent

--- a/P1/src/shelter_detail_user_view.html
+++ b/P1/src/shelter_detail_user_view.html
@@ -199,7 +199,8 @@
             <div class="rounded-full w-[50px] h-[50px] mr-1 mb-1">
                 <img src="resources/shelter/shelter_logo.png">
             </div>
-            <h1 class="text-5xl w-min md:w-auto">Toronto Adoption Center</h1>
+            <h1 class="text-2xl font-bold text-gray-900 md:text-3xl lg:text-3xl
+            ">Toronto Adoption Center</h1>
         </div>
         <section id="shelter-info" class="p-2 w-3/4 mb-3">
             <div
@@ -287,8 +288,10 @@
             </div>
         </section>
 
-        <h2 class="text-5xl mt-3 mb-1 p-2">Pets Available for Adoption</h2>
-        <h2 class="pb-3">Create lasting memories with a new loving companion!</h2>
+        <h2 class="text-2xl font-bold text-gray-900 md:text-3xl lg:text-3xl
+        mt-3 mb-1 p-2">Pets Available for Adoption</h2>
+        <h2 class="pb-3 font-light text-gray-500 text-sm sm:text-lg md:text-xl">Create lasting memories with a new
+            loving companion!</h2>
 
         <section id="shelter-pets" class="w-full p-3">
             <div class="stretch flex flex-row m-4 md:max-w-full  bg-white rounded-lg shadow-md mb-0">
@@ -551,8 +554,8 @@
                 </div>
         </section>
 
-        <h2 class="text-5xl mb-1 p-2">Reviews</h2>
-        <h2>Tell us about your adoption experience!</h2>
+        <h2 class="text-2xl font-bold text-gray-900 md:text-3xl lg:text-3xl mb-1 p-2 pt-4">Reviews</h2>
+        <h2 class="font-light text-gray-500 text-sm sm:text-lg md:text-xl">Tell us about your adoption experience!</h2>
 
 
         <section id="shelter-reviews" class="w-10/12">
