--- a/P1/src/pet_detail.html
+++ b/P1/src/pet_detail.html
@@ -19,7 +19,7 @@
             <div class="rounded-full w-[50px] h-[50px] mr-1 mb-1">
                 <img src="resources/shelter/shelter_logo.png">
             </div>
-            <h1 class="text-5xl w-min md:w-auto">Toronto Adoption Center</h1>
+            <h1 class="text-2xl font-bold text-gray-900 md:text-3xl lg:text-3xl">Toronto Adoption Center</h1>
             <div class="relative self-start ml-1">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                     stroke="currentColor" class="w-6 h-6">
@@ -435,9 +435,12 @@
             </div>
         </div>
         <div class="flex justify-center">
-            <button type="button"
-                class="m-3 text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700">
-                Adopt</button>
+            <a href="pet_adoption.html">
+
+                <button type="button"
+                    class="m-3 text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700">
+                    Adopt</button>
+            </a>
 
         </div>
     </section>
