--- a/P1/src/search.html
+++ b/P1/src/search.html
@@ -194,10 +194,9 @@
                 </div>
             </div>
         </div>
-        <div class="flex flex-row m-4 container md:max-w-full  bg-white rounded-lg shadow-md">
+        <div class="flex flex-col md:flex-row m-4 container md:max-w-full  bg-white rounded-lg shadow-md">
             <!-- TODO not collapsed by default when screen size is at least medium -->
-            <!-- <div  class="p-4 shadow-md hidden md:visible w-[220px] md:w-[300px] flex-none sm:flex-none sm:basis-1/4flex " data-te-collapse-item data-te-collapse-horizontal id="collapseWidthExample"> -->
-            <div id="drawer-disabled-backdrop" class="hidden flex z-40 p-4 w-[220px] md:w-[300px] flex-none
+            <div id="drawer-disabled-backdrop" class="hidden flex z-40 p-4 w-full md:w-[300px] flex-none
                           -translate-x-full bg-white dark:bg-gray-800" tabindex="-1" aria-labelledby="drawer-disabled-backdrop-label">
 
                 <div class="flex flex-col w-full">
@@ -302,7 +301,6 @@
                     <hr class="mt-4 mb-2">
                     <div class="self-start">
                         <button type="button" class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700">
-
                             Clear filters
                         </button>
                     </div>
@@ -310,12 +308,10 @@
                 </div>
             </div>
 
-            <div class="md:grow p-8 bg-white">
+            <div class="md:grow px-8 pt-4  bg-white">
                 <!-- May or may not need pagination -->
                 <div class="gap-4 flex flex-row flex-wrap justify-between items-center md:items-end">
                     <div class="flex flex-row items-center gap-x-4">
-
-                        <!-- <a class=" justify-center rounded-md bg-primary px-3 py-3 text-md font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600" type="button" data-te-collapse-init data-te-target="#collapseWidthExample" data-te-ripple-init data-te-ripple-color="light" aria-expanded="false" aria-controls="collapseWidthExample"> -->
                         <button id="showDrawer"  class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700"type="button" aria-controls="drawer-disabled-backdrop">
 
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-6 w-6">
@@ -337,17 +333,6 @@
                                 <option value="sort3">Age</option>
                             </select>
                         </div>
-                        <nav aria-label="Pagination">
-                            <ul class="list-style-none flex">
-                                <li>
-                                    <a class="relative block rounded bg-transparent px-3 py-1.5 text-sm text-neutral-600 transition-all duration-300 hover:bg-neutral-100 dark:text-white dark:hover:bg-neutral-700 dark:hover:text-white" href="#">Prev</a>
-                                </li>
-                                <li>
-                                    <a class="relative block rounded bg-transparent px-3 py-1.5 text-sm text-neutral-600 transition-all duration-300 hover:bg-neutral-100 dark:text-white dark:hover:bg-neutral-700 dark:hover:text-white" href="#">Next</a>
-                                </li>
-                            </ul>
-
-                        </nav>
                     </div>
                 </div>
 
@@ -386,7 +371,7 @@
                     </div>
                 </div>
 
-                <div class="flex flex-col items-center md:flex-col-reverse md:items-end">
+                <div class="my-4 flex flex-col items-center md:flex-col-reverse md:items-end">
                     <nav aria-label="Pagination">
                         <ul class="list-style-none flex">
                             <li>
