--- a/P1/src/pet_adoption.html
+++ b/P1/src/pet_adoption.html
@@ -4,21 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css" rel="stylesheet"> -->
+    <link rel="stylesheet" href="style.css">
+    <!-- flowbite tailwind -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.css" rel="stylesheet" />
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Pet Adoption</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/tw-elements.min.css" />
-
-    <!-- <style>.sepcial {
-    content: "";
-    display: block;
-    padding-top: 100%;
-    }
-    </style> -->
 </head>
 
-<body class="flex flex-col justify-center items-center bg-gray-100 m-3">
-
-    <body class="flex flex-col justify-center items-center bg-gray-100 m-3">
+<body>
+    <div class="flex flex-col justify-center items-center bg-gray-100">
         <div class="flex justify-center items-center p-3">
             <a href="shelter_detail_user_view.html"
                 class="relative flex justify-center text-center items-center transform transition duration-300 hover:scale-105">
@@ -217,10 +212,10 @@
             </a>
         </section>
 
-        <footer class="bg-gray-100 rounded-lg shadow" style="width: 100%;">
+        <footer class="bg-gray-200 rounded-lg shadow" style="width: 100%;">
             <div class="w-full max-w-screen-xl mx-auto p-4 py-8 lg:py-12 lg:pb-16">
                 <div class="sm:flex sm:items-center sm:justify-between">
-                    <a href="./main/main_after_login.html" class="flex items-center mb-4 sm:mb-0">
+                    <a href="https://flowbite.com/" class="flex items-center mb-4 sm:mb-0">
                         <!-- <img src="https://flowbite.com/docs/images/logo.svg" class="h-8 mr-3" alt="Flowbite Logo" /> -->
                         <span class="self-center text-2xl font-semibold whitespace-nowrap">Pet Pal</span>
                     </a>
@@ -241,8 +236,8 @@
                 </div>
                 <hr class="my-6 border-gray-200 sm:mx-auto lg:my-6" />
                 <div class="sm:flex sm:items-center sm:justify-between">
-                    <span class="text-sm text-gray-500 sm:text-center">© 2023
-                        <a href="./main/main_after_login.html" class="hover:underline">
+                    <span class="text-sm text-gray-500 sm:text-center">© 2023 <a href="https://flowbite.com/"
+                            class="hover:underline">
                             PetPal™</a>. All Rights Reserved.
                     </span>
                     <div class="flex mt-4 space-x-5 sm:justify-center sm:mt-0">
@@ -270,6 +265,7 @@
             </div>
         </footer>
 
-    </body>
+    </div>
+</body>
 
 </html>
