--- a/P1/src/shelter_application.html
+++ b/P1/src/shelter_application.html
@@ -4,16 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shelter Application View</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/tw-elements.min.css" />
-
-    <!-- <style>.sepcial {
-    content: "";
-    display: block;
-    padding-top: 100%;
-    }
-    </style> -->
+    <!-- <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css" rel="stylesheet"> -->
+    <link rel="stylesheet" href="style.css">
+    <!-- flowbite tailwind -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.css" rel="stylesheet" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Shelter Application</title>
 </head>
 
 <body class="flex flex-col justify-center items-center bg-gray-100 m-3">
@@ -350,7 +346,7 @@
     </div>
 
     <!-- Footer (You can customize it as needed) -->
-    <footer class="bg-gray-100 rounded-lg shadow" style="width: 100%;">
+    <footer class="bg-gray-200 rounded-lg shadow">
         <div class="w-full max-w-screen-xl mx-auto p-4 py-8 lg:py-12 lg:pb-16">
             <div class="sm:flex sm:items-center sm:justify-between">
                 <a href="https://flowbite.com/" class="flex items-center mb-4 sm:mb-0">
