--- a/P1/src/search.html
+++ b/P1/src/search.html
@@ -154,10 +154,10 @@
         <div class="bg-gray-100 w-full md:w-3/4 p-2 md:p-8 rounded-lg  w-4/5 mb-5">
             <div class="flex flex-col justify-center  items-center mb-4">
                 <div class="max-w-5xl  py-6 ">
-                    <h1 class="text-3xl font-bold tracking-tight text-gray-900">Find a pet </h1>
+                    <h1 class="text-2xl sm:text-3xl md:text-4xl font-bold tracking-tight text-gray-900">Find a pet </h1>
                 </div>
                 <!-- Search Input -->
-                <div class="w-full">
+                <div class="w-full max-w-xs sm:max-w-2xl">
                     <form>
                         <div class="flex">
                             <button id="dropdown-button" data-dropdown-toggle="dropdown" class="flex-shrink-0 z-10 inline-flex items-center py-2.5 px-4 text-sm font-medium text-center text-gray-900 bg-gray-100 border border-gray-300 rounded-l-lg hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-gray-700 dark:text-white dark:border-gray-600" type="button">All species <svg class="w-2.5 h-2.5 ml-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
