Update pet results

--- a/P1/src/shelter_detail_editable.html
+++ b/P1/src/shelter_detail_editable.html
@@ -679,7 +679,9 @@ If you have any questions, feel free to visit us or call us at 416-123-1234</tex
 
     </section>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/tw-elements.umd.min.js"></script>
+    <script src="hack.js"></script>
 
 </body>
 
