--- a/P1/src/seeker_update_error.html
+++ b/P1/src/seeker_update_error.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -28,7 +27,6 @@
                     <div class="relative inline-flex w-3 h-3 bg-red-500 border-2 border-white rounded-full -top-2 right-3"></div>
                     </div>
                     </button>
-                    
                     <!-- Notification Dropdown menu -->
                     <div id="dropdownNotification" class="hidden md:z-20 md:w-full md:max-w-sm md:bg-white md:divide-y md:divide-gray-100 md:rounded-lg md:shadow md:border" aria-labelledby="dropdownNotificationButton">
                     <div class="hidden md:block md:px-4 md:py-2 md:font-medium md:text-center md:text-gray-700 md:rounded-t-lg md:bg-gray-50">
@@ -230,7 +228,7 @@
                                 <!-- when get rid of the a tag inside button, will not proceed to main after login -->
                             </button>
                             <button type="submit" class="text-white mb-5 bg-blue-700 hover:bg-gray-900 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-medium w-1/2 px-5 py-2.5 text-center">
-                                <a href="./seeker_update_error.html">Update</a>
+                                <a href="#">Update</a>
                                 <!-- when get rid of the a tag inside button, will not proceed to main after login -->
                             </button>
                         </div>
