--- a/P1/src/shelter_detail_user_view.html
+++ b/P1/src/shelter_detail_user_view.html
@@ -117,7 +117,7 @@
             loving companion!</h2>
 
         <section id="shelter-pets" class="w-full p-3">
-        <div class="flex flex-col md:flex-row m-4 container md:max-w-full  bg-white rounded-lg shadow-md">
+        <div class="flex flex-col md:flex-row m-4 container md:max-w-full  bg-white rounded-lg shadow-md gap-4">
             <!-- TODO not collapsed by default when screen size is at least medium -->
             <div id="drawer-disabled-backdrop" class="hidden flex z-40 p-4 w-full md:w-[300px] flex-none
                           -translate-x-full bg-white dark:bg-gray-800" tabindex="-1" aria-labelledby="drawer-disabled-backdrop-label">
