--- a/P1/src/search.html
+++ b/P1/src/search.html
@@ -7,7 +7,7 @@
     <title>Search Page</title>
     <!-- Include the Tailwind CSS stylesheet -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/tw-elements.min.css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com/3.3.0"></script>
 
 </head>
@@ -60,7 +60,7 @@
                 </div>
             </div>
         </div>
-        <div class="flex flex-col md:flex-row m-4 container md:max-w-full  bg-white rounded-lg shadow-md">
+        <div class="flex flex-col md:flex-row m-4 container md:max-w-full  bg-white rounded-lg shadow-md gap-4">
             <!-- TODO not collapsed by default when screen size is at least medium -->
             <div id="drawer-disabled-backdrop" class="hidden flex z-40 p-4 w-full md:w-[300px] flex-none
                           -translate-x-full bg-white dark:bg-gray-800" tabindex="-1" aria-labelledby="drawer-disabled-backdrop-label">
