Add bottom margins

--- a/P1/src/shelter_detail_shelter_view.html
+++ b/P1/src/shelter_detail_shelter_view.html
@@ -274,7 +274,7 @@
 
                 <div class="mt-4 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 ">
                 <!-- Card 1 -->
-                <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg 
+                    <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg  mb-2
                             transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
                     <a href="./pet_detail.html">
                         <div class="relative w-full h-56">
@@ -303,7 +303,7 @@
                 </div>
 
                 <!-- Card 2 -->
-                <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg 
+                <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg  mb-2
                             transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
                     <a href="./pet_detail.html">
                         <div class="relative w-full h-56">
@@ -332,7 +332,7 @@
                 </div>
 
                 <!-- Card 3 -->
-                <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg 
+                <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg  mb-2
                             transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
                     <a href="./pet_detail.html">
                         <div class="relative w-full h-56">
@@ -361,7 +361,7 @@
                 </div>
 
                 <!-- Card 4 -->
-                <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg 
+                <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg  mb-2
                             transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
                     <a href="./pet_detail.html">
                         <div class="relative w-full h-56">
