--- a/P1/src/shelter_detail_user_view.html
+++ b/P1/src/shelter_detail_user_view.html
@@ -295,7 +295,7 @@
 
                     <div class="mt-4 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 ">
                         <!-- Card 1 -->
-                        <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg 
+                        <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg  mb-2
                             transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
                             <a href="./pet_detail.html">
                                 <div class="relative w-full h-56">
@@ -325,7 +325,7 @@
                         </div>
 
                         <!-- Card 2 -->
-                        <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg 
+                        <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg  mb-2
                             transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
                             <a href="./pet_detail.html">
                                 <div class="relative w-full h-56">
@@ -355,7 +355,7 @@
                         </div>
 
                         <!-- Card 3 -->
-                        <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg 
+                        <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg  mb-2
                             transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
                             <a href="./pet_detail.html">
                                 <div class="relative w-full h-56">
@@ -385,7 +385,7 @@
                         </div>
 
                         <!-- Card 4 -->
-                        <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg 
+                        <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg  mb-2
                             transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
                             <a href="./pet_detail.html">
                                 <div class="relative w-full h-56">
