--- a/P1/src/search.html
+++ b/P1/src/search.html
@@ -204,7 +204,7 @@
 
                 <div class="mt-4 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 ">
                 <!-- Card 1 -->
-                <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg 
+                <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg mb-2
                             transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
                     <a href="./pet_detail.html">
                         <div class="relative w-full h-56">
@@ -233,7 +233,7 @@
                 </div>
 
                 <!-- Card 2 -->
-                <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg 
+                <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg mb-2
                             transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
                     <a href="./pet_detail.html">
                         <div class="relative w-full h-56">
@@ -262,7 +262,7 @@
                 </div>
 
                 <!-- Card 3 -->
-                <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg 
+                <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg mb-2
                             transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
                     <a href="./pet_detail.html">
                         <div class="relative w-full h-56">
@@ -291,7 +291,7 @@
                 </div>
 
                 <!-- Card 4 -->
-                <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg 
+                <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg mb-2
                             transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
                     <a href="./pet_detail.html">
                         <div class="relative w-full h-56">
